# daedalus

./: .travis.yml  default.nix  package-lock.json  package.json
installers/: Launcher.hs  MacInstaller.hs  cardano-installer.cabal  cardano-installer.nix  default.nix  launcher-config-mac.yaml  launcher-config-windows.yaml  wallet-topology.yaml
scripts/: build-installer-unix.sh
source/renderer/: webpack.config.js
